# protogee

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  config.ini
halton/: halton.hpp
include/: camera.h  interface.h  model.h  renderer.h
src/: camera.cpp  interface.cpp  main.cpp  model.cpp  renderer.cpp  renderer.cpp.save
src/kernels/: kernel.cl
src/shaders/: diffuse.fsh  diffuse.vsh  dir_dpth.vsh  disc.fsh  dplane.fsh  dpth.fsh  dpth.gsh  dpth.vsh  gbuffer.fsh  gbuffer.vsh  ihistory.fsh  ihistory.vsh  iplane.fsh  iplane.vsh  shader.fsh  shader.vsh  vpl.fsh  vpl.vsh
